--- a/src/Canducci.Helpers/project.json
+++ b/src/Canducci.Helpers/project.json
@@ -1,8 +1,7 @@
 {
-  "title": "Canducci Helpers",
-  "description": "Canducci Helpers",
+  "title": "Canducci Helpers Core",
+  "description": "Canducci Helpers Core",
   "version": "1.0.0-*",
-
   "dependencies": {
     "NETStandard.Library": "1.5.0-rc2-24027",
     "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final"
