--- a/src/Canducci.Helpers/project.json
+++ b/src/Canducci.Helpers/project.json
@@ -4,6 +4,8 @@
   "version": "1.0.0-*",
   "dependencies": {
     "NETStandard.Library": "1.5.0-rc2-24027",
+    "Microsoft.Extensions.WebEncoders.Core": "1.0.0-rc1-final",
+    "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final"
   },
   "frameworks": {
